--- a/style.css
+++ b/style.css
@@ -1,87 +1,147 @@
-/*GENERAL*/
+/* GENERAL */
 
-/*permet d'inport la font*/
-  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
-/*  * permet de tout ciblé dans le html */
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-body{
-    font-family: poppins;
+body {
+  font-family: "Poppins", sans-serif;
 }
 
-html{
-    scroll-behavior : smooth ; /* pour que les liens soient plus lisibles et ne bougent pas en cas de scroll */
+html {
+  scroll-behavior: smooth;
 }
 
-p{
-    color: rgb(85, 85, 85);
+p {
+  color: rgb(85, 85, 85);
 }
 
-/*TRANSITIONS*/
-a,.btn{
-    transition: all 300ms ease;
+/* TRANSITION */
+
+a,
+.btn {
+  transition: all 300ms ease;
 }
 
-/*NAV BUREAU*/
-nav, .nav-links{
-    display: flex;
+/* DESKTOP NAV */
+
+nav,
+.nav-links {
+  display: flex;
 }
 
-nav{
-    justify-content: space-around;
-    align-items: center;
-    height: 17vh;
+nav {
+  justify-content: space-around;
+  align-items: center;
+  height: 17vh;
 }
 
-.nav-links{
-    gap: 2rem;
-    list-style: none;
-    font-size: 1.5rem;
+.nav-links {
+  gap: 2rem;
+  list-style: none;
+  font-size: 1.5rem;
 }
 
-a{
-    color: black;
-    text-decoration: none;
-    text-decoration-color: white;
+a {
+  color: black;
+  text-decoration: none;
+  text-decoration-color: white;
 }
 
-a:hover{
-    color: grey;
-    text-decoration: underline;
-    /*Permet de mettre de l'espace entre le soulignement sur la nav*/
-    text-underline-offset: 1rem;
-    text-decoration-color: rgb(181, 181, 181);
+a:hover {
+  color: grey;
+  text-decoration: underline;
+  text-underline-offset: 1rem;
+  text-decoration-color: rgb(181, 181, 181);
 }
 
-.logo{
-    font-size: 2rem;
+.logo {
+  font-size: 2rem;
 }
 
-.logo:hover{
-    cursor: default;
+.logo:hover {
+  cursor: default;
 }
 
-/*HAMBURGER MENU*/
+/* HAMBURGER MENU */
 
-#hamburger-nav{
-    /*permet de pas le voir si on est pas au bon format*/
-    display: none;
+#hamburger-nav {
+  display: none;
 }
 
-#hamburger-menu{
-    position: relative;
-    display: inline-block;
+.hamburger-menu {
+  position: relative;
+  display: inline-block;
 }
 
-#hamburger-icon{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 24px;
-    width: 30px;
-    cursor: pointer;
+.hamburger-icon {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 24px;
+  width: 30px;
+  cursor: pointer;
+}
+
+.hamburger-icon span {
+  width: 100%;
+  height: 2px;
+  background-color: black;
+  transition: all 0.3 ease-in-out;
+}
+
+.menu-links {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: white;
+  width: fit-content;
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.3 ease-in-out;
+}
+
+.menu-links a {
+  display: block;
+  padding: 10px;
+  text-align: center;
+  font-size: 1.5rem;
+  color: black;
+  text-decoration: none;
+  transition: all 0.3 ease-in-out;
+}
+
+.menu-links li {
+  list-style: none;
+}
+
+.menu-links.open {
+  max-height: 300px;
+}
+
+.hamburger-icon.open span:first-child {
+  transform: rotate(45deg) translate(10px, 5px);
+}
+
+.hamburger-icon.open span:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger-icon.open span:last-child {
+  transform: rotate(-45deg) translate(10px, -5px);
+}
+
+.hamburger-icon span:first-child {
+  transform: none;
+}
+
+.hamburger-icon span:first-child {
+  opacity: 1;
+}
+
+.hamburger-icon span:first-child {
+  transform: none;
 }
